<resources>
    <string name="app_name">Get My Meeting</string>
    <string name="title_activity_settingss">SettingssActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Abdulrahman HASANATO</string>
    <string name="user_email">abdulrahman.judy0604@gmail.com</string>
    <string name="profile_image_alt">Profile image</string>
    <string name="reservations_icon">Reservations Icon</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="pen_icon">Pen Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="inbox_icon">Inbox Icon</string>
    <string name="link_icon">Link Icon</string>
    <string name="app_logo">App Logo</string>
</resources>