<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <!--#region Profile -->
    <LinearLayout
        android:id="@+id/profileInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/profile_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/profile_image_alt"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textSize="12sp"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <!--#endregion -->

    <!--#region Profile Buttons -->
    <LinearLayout
        android:id="@+id/profileButtonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/profileInfoContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="12">

            <LinearLayout
                android:id="@+id/btnPastReservation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onPastReservationClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/inbox_icon"
                    android:src="@drawable/icon_past_reservations_black"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Past Reservations"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnInvite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onInviteClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/link_icon"
                    android:src="@drawable/icon_link"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Invite someone"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="12">

            <LinearLayout
                android:id="@+id/btnEditAccount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onEditProfileClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/pen_icon"
                    android:src="@drawable/icon_edit"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Edit Account"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnSettings"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onSettingsClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/settings_icon"
                    android:src="@drawable/icon_settings"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Settings"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="12">

            <LinearLayout
                android:id="@+id/btnReservations"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onReservationClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/reservations_icon"
                    android:src="@drawable/icon_reservations"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Reservations"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnAddRoom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="6"
                android:background="@drawable/profile_button"
                android:onClick="onAddRoomClicked"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:contentDescription="@string/plus_icon"
                    android:src="@drawable/icon_add"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="10"
                    android:paddingVertical="10dp"
                    android:text="Add Room"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    tools:ignore="HardcodedText" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    <!--#endregion -->

    <!--<android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/default_button_style"
        android:text="Help Line"
        android:textAllCaps="false"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        tools:ignore="HardcodedText" />-->

    <!--#region Bottom Navbar-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="20dp"
        app:itemIconTint="@drawable/bottom_nav_item_color_selector"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navbar_logged_in" />
    <!--#endregion-->

</androidx.constraintlayout.widget.ConstraintLayout>